<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="by.chekun.presentation.activities.main.MainActivity">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile"
        android:title="@string/action_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/login"
        android:title="@string/action_login"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_car"
        android:icon="@mipmap/ic_plus"
        android:title="@string/action_add_car"
        app:showAsAction="always" />


</menu>