<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:context=".presentation.activities.add.AddAdvertisementActivity">

        <ScrollView
            android:id="@+id/scrollView"
            style="@style/layout_width_and_height_match">

            <LinearLayout
                style="@style/layout_width_and_height_match"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">


                <!--ImageView where image will be set-->
                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movie_photo_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bmw_m3_e46" />
                <!--Button to pick image-->
                <Button
                    android:id="@+id/img_pick_btn"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_select_image" />


                <!-- TITLE -->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/label_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/txt_title"
                        android:text="@string/label_advertisement_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorBlueAccent">

                    <EditText
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:inputType="text"
                        android:text="@string/txt_default_car_description" />
                </RelativeLayout>


                <!-- body -->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/label_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/txt_body"
                        android:text="@string/label_description"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorBlueAccent">

                    <EditText
                        android:id="@+id/txt_body"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:inputType="text"
                        android:text="@string/txt_default_car_description" />
                </RelativeLayout>


                <!-- Тип объявления -->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/label_type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/type_spinner"
                        android:text="@string/label_advertisement_type"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorBlueAccent">

                    <Spinner
                        android:id="@+id/type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </RelativeLayout>


                <Button
                    android:id="@+id/car_save_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clickSaveCar"
                    android:text="@string/button_save_car" />

                <Button
                    android:id="@+id/car_draft_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9F9F9F"
                    android:onClick="clickDraftCar"
                    android:text="@string/button_draft_car" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</LinearLayout>