<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="RegistrationBinding">

        <variable
            name="refisterReq"
            type="by.chekun.repository.database.entity.user.RegisterRequest" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:context=".presentation.activities.login.RegisterActivity">

        <ScrollView
            android:id="@+id/scrollView"
            style="@style/layout_width_and_height_match">

            <LinearLayout
                style="@style/layout_width_and_height_match"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <!--ImageView where image will be set-->
                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="@dimen/registration_photo_height"
                    android:src="@drawable/registration" />

                <!-- firstName -->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/label_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/txt_firstName"
                        android:text="@string/label_firstName"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorBlueAccent">

                    <EditText
                        android:id="@+id/txt_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:inputType="text"
                        android:text="" />
                </RelativeLayout>

                <!-- lastName -->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/label_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/txt_lastName"
                        android:text="@string/label_lastName"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorBlueAccent">

                    <EditText
                        android:id="@+id/txt_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:inputType="text"
                        android:text="" />
                </RelativeLayout>

                <!-- login -->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/label_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/txt_email"
                        android:text="@string/label_email"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorBlueAccent">

                    <EditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:inputType="text"
                        android:text="" />
                </RelativeLayout>


                <!-- pass -->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/label_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/txt_pass"
                        android:text="@string/label_password"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorBlueAccent">

                    <EditText
                        android:id="@+id/txt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:inputType="text"
                        android:text="" />
                </RelativeLayout>


                <Button
                    android:id="@+id/car_save_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clickRegister"
                    android:text="@string/button_register" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</layout>